--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "morilog/jalali": "3.*",
         "symfony/translation-contracts": "^1.1.6",
-        "phpmailer/phpmailer": "^6.8"
+        "phpmailer/phpmailer": "^6.8",
+        "firebase/php-jwt": "^6.4"
     }
 }
